--- a/index.html
+++ b/index.html
@@ -31,10 +31,6 @@
     <!-- (1) inline CSS -->
     <p style="margin: 0; font-weight: 700;">Варіант 7</p>
 
-    <p class="muted">
-      Демонстрація підключення CSS (inline / style / external), селекторів, @media та псевдокласів.
-    </p>
-
     <nav class="toc">
       <strong>Зміст:</strong>
       <a href="#responsive">@media зображення</a> ·
@@ -45,7 +41,7 @@
 
   <main class="container">
     <section id="responsive" class="card">
-      <h2>1) Варіант 7 — адаптивне зображення (@media)</h2>
+      <h2>1) Варіант 7 — адаптивне зображення</h2>
       <p class="muted">
         Вимога: при max-width: 1200px → 600px, при max-width: 800px → 400px.
       </p>
@@ -96,7 +92,7 @@
     </section>
 
     <section id="posfloat" class="card">
-      <h2>3) Додатково: Position + Float (для вимог ЛР2)</h2>
+      <h2>3) Додатково: Position + Float </h2>
 
       <div class="note">
         Цей блок має <code>position: relative</code>, а значок справа зверху — <code>position: absolute</code>.
@@ -111,9 +107,5 @@
       <div class="clearfix"></div>
     </section>
   </main>
-
-  <footer class="page-footer">
-    <small>© 2026 — ЛР2 CSS, варіант 7</small>
-  </footer>
 </body>
 </html>
